--- a/exchange-ui/src/app/components/view-registartion/view-registartion.component.html
+++ b/exchange-ui/src/app/components/view-registartion/view-registartion.component.html
@@ -16,8 +16,8 @@
       <div class="form-control">{{cryptoReg.phone}}</div>
     </div>
     <div class="form-group">
-      <label>'Crypto Model</label>
-      <div class="form-control">{{cryptoReg.cryptoType}}</div>
+      <label>Crypto Model</label>
+      <div class="form-control">{{cryptoReg.coinType}}</div>
     </div>
     <div class="form-group">
       <label>Amount of coins to sell</label>
