--- a/exchange-ui/src/app/components/admin/admin.component.html
+++ b/exchange-ui/src/app/components/admin/admin.component.html
@@ -14,7 +14,7 @@
         {{crypto.email}}
       </td>
       <td>
-        {{crypto.coinTypes}}
+        {{crypto.coinType}}
       </td>
       <td class="text-right">
         {{crypto.amountOfCoins}}
